# iqvara

./: .env  .env.example  .flake8  .gitignore  .isort.cfg  Makefile  README.md  TODO  pyproject.toml
apps/shared/: base.py  models.py  paginations.py  permissions.py
apps/users/: admin.py  apps.py  serializers.py  tests.py  urls.py  utils.py  views.py
apps/users/admin/: __init__.py  admin.py  base_admin.py
apps/users/fixtures/: blogs.json  categories.json  comments.json  courses.json  coursesteps.json  devices.json  enrolments.json  faqs.json  leaderboards.json  lessons.json  payments.json  promocodes.json  reviews.json  sections.json  settings.json  steps.json  tags.json  tokens.json  users.json
apps/users/fixtures/blogs/: blogs.json  comments.json  step.json  steps.json
apps/users/fixtures/course/: categories.json  (+4 more)
apps/users/migrations/: 0001_initial.py
apps/users/models/: __init__.py  blogs.py  courses.py  orders.py  payment.py  setting.py  settings.py  tags.py  users.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AllCourses.tsx  BlogCard.tsx  BlogSection.tsx  Contact.tsx  CourseCard.tsx  CoursesPreview.tsx  Footer.tsx  Header.tsx  Hero.tsx  Professions.tsx  Stats.tsx
frontend/src/pages/: Blogs.tsx  Careers.tsx  Courses.tsx  FAQ.tsx  Index.tsx  Login.tsx
frontend/templates/: index.html
locale/en/LC_MESSAGES/: django.po
locale/uz/LC_MESSAGES/: django.mo  django.po
root/: settings.py  urls.py
static/assets/: index-CvZ2CmQN.css  index-frXWGJAm.js
(+9 files in other folders)
