[project]
name = "iqvara-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django-ckeditor-5>=0.2.18",
    "django-debug-toolbar>=6.0.0",
    "django-filter>=25.2",
    "django-jazzmin>=3.0.1",
    "flake8-django>=1.4",
    "isort>=6.1.0",
    "django-rest-knox>=5.0.2",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "dotenv>=0.9.9",
    "drf-spectacular>=0.28.0",
    "psycopg2-binary>=2.9.11",
    "redis>=7.0.0",
    "flake8>=6.1.0",
    "argon2-cffi>=25.1.0",
    "django-admin-geomap>=1.6",
]
